release/evidence/1.1.2-rc.2/FINAL_REPORT.md
# FINAL REPORT — StoryLens 1.1.2-rc.2

```text
STORYLENS 1.1.2-RC.2 BUILD REPORT
RELEASE CHANGE：
CHG-20260729-010
INTEGRATED FIX：
CHG-20260729-009
INCLUDED CHANGES：
CHG-20260728-040
CHG-20260728-041
CHG-20260729-001
CHG-20260729-002
CHG-20260729-003
CHG-20260729-004
CHG-20260729-005
CHG-20260729-006
CHG-20260729-007
CHG-20260729-008
CHG-20260729-009
CHG-20260729-010
CHG-042 INCLUDED：
NO
RELEASE SCOPE：
SINGLE CHAPTER ONLY
PUBLIC BUILD SOURCE HEAD：
624573104bccd5fab63ec03733a7ab18fed814c2
PRIVATE HEAD：
23a0b025db51acaa8e62f4e81bc7628f19a8e2a6
PRIVATE CODE CHANGE：
NO
VERSION DURING BUILD：
1.1.2-rc.2
VERSION AFTER BUILD：
1.1.2
TARGETED PYTEST CHG-009：
17 passed / 0 failed
TARGETED VITEST：
3 files / 51 passed
VERSION CHECK：
PASS
CONFIG PACKAGING：
PASS
CWD INDEPENDENCE：
PASS (6/6)
PRODUCTION-LIKE HEALTH：
PASS
SECURITY AUDIT：
PASS
INSTALLER AUDIT：
PASS
SIDECAR BUILD COUNT：
1
INSTALLER BUILD COUNT：
1
SIDECAR SHA-256：
C1B84D3C36EA7A335701017A1FDECB7CF16FC16FD4791DFE2D375799E0BE9F6C
INSTALLER PATH：
D:\Dstorylens-wt-hotfix-1.1.2-integration\dist\release\StoryLens_1.1.2-rc.2_x64-setup.exe
SAFE ARCHIVE PATH：
D:\StoryLens-Local-Evidence\installer-archive\StoryLens_1.1.2-rc.2_x64-setup.exe
INSTALLER SHA-256：
CBE975E097E24A7DD5452C3B2B3BCB93DD75AFAED8B857EEF297B4C05FF94959
INSTALLER DISPLAY VERSION：
1.1.2-rc.2
RC.1 HASH RECORDED：
2C9ED3B8E898118391B56F7A297F96B9CFB8A9951C1226C851C5B7C1AEF1F61F
RC.1 BINARY AFTER RC.2 COLLECT：
LOST (dist/release wipe deleted in-tree archive/; see RC1_PRESERVE_INCIDENT.md)
RC ARCHIVE SCRIPT FIX：
YES (archive now to StoryLens-Local-Evidence\installer-archive)
REAL PROVIDER CALLS：
0
FORMAL DATABASE WRITES：
0
PUSH：
NO
TAG：
NO
GITHUB RELEASE：
NO
FORMAL 1.1.2 BUILD：
NO
FORMAL INSTALL OVERWRITE：
NO
CHG-009 STATUS：
verified (integrated)
CHG-010 STATUS：
tested
TRAIN STATUS：
ready-for-rc-build → awaiting manual installed acceptance
NEXT STEP：
MANUAL INSTALLED ACCEPTANCE (settings verify → analysis start; Fake/isolated preferred)
```
